# chatgpt

./: .gitignore  ChatGPT.py  KarshGPT.jsonl  Streamlit-ChatBot.py  Streamlit-ChatBot.py.REMOVED.git-id  pyproject.toml  requirements.txt  secrets.toml
chatgpt/: settings.py  urls.py
