[tool.poetry]
name = "chatgpt"
version = "0.1.0"
description = ""
authors = ["Karsh Sahay <karsh.sahay@atmosera.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
openai = "^0.27.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
